resource-manifests/service-sa-frontend-lb.yaml
apiVersion: v1
kind: Service              
metadata:
  name: sa-frontend
spec:      
  ports:
  - port: 80               
    protocol: TCP          
    targetPort: 80         
  selector:                
    app: sa-frontend
