resource-manifests/ingress-sa-frontend-web-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
  - host: frontend.rtd.squareops.co.in  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-frontend
            port: 
              number: 80
