resource-manifests/ingress-sa-webapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webapp.rtd.squareops.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-web-app-lb
            port:
              number: 80
